--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "fastclick": "^1.0.6",
     "vue": "^2.2.2",
     "vue-infinite-loading": "^2.1.3",
